Content changes, fixed footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <img class="mb-4 mt-3" width="74" src="img/es_logo_white.svg" alt="">
-            <p class="text-faded mb-5">Å mikrodosere vil si å ta små doser. Det er mest vanlig å mikrodosere psykedelika, som LSD eller psilocybin. En standard mikrodose er 10µg med LSD eller 0,1 gram med sopp. Det er omtrent 10% av det som regnes som en vanlig brukerdose. Mikrodosene tas med regelmessige intervaller, for eksempel hver tredje dag, og gjerne for flere måneder av gangen.</p>
+            <p class="text-faded mb-5">Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin. En standard mikrodose er 10µg med LSD eller 0,1 gram med sopp. Det er omtrent 10% av en vanlig brukerdose. Mikrodosene blir tatt med regelmessige intervaller, for eksempel hver tredje dag, og over lengre tid.</p>
             <a class="button js-scroll-trigger" href="#hvorfor">finn ut mer</a>
           </div>
         </div>
@@ -97,8 +97,8 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Hvorfor mikrodosere</h2>
             <hr class="text-primary mt-4 mb-5">
-            <div class="text-muted mb-4 text-left">
-              <p>Flere oppgir svært positive resultater etter å ha prøvd mikrodoser. Mest kjent er kanskje teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester (kilde: <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">Wired</a>). Mange som har forsøkt mikrodosering rapporterer høyere grad av overskudd og energi dagene de mikrodoser, og noen opplever at det gjør trening og fysisk aktivitet mer lettere og mer tilfredsstillende. Andre opplever at mikrodosering hjelper dem med å håndtere depressive symptomer og angst i dagliglivet, og foretrekker dette fremfor tradisjonelle medikamenter.</p>
+            <div class="text-muted mt-5 mb-4 text-left">
+              <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde: <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">Wired</a>). Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer og angst i dagliglivet, og foretrekker dette fremfor psykiatriske medisiner.</p>
             </div>
           </div>
           <div class="col-lg-8 mx-auto text-center">
@@ -119,15 +119,15 @@
           <div class="row">
             <div class="col-lg-8 mx-auto ">
               <div class="bg-primary card rounded py-5 text-left text-faded">
-                <p>Mikrodosering innebærer å ta små doser på omtrent 10% av en standard dose (tilsvarende 10µg LSD eller 0,1g psilocybin-sopp) to til tre ganger i uken over en periode på typisk én måned. Man bør helst la det gå 2 dager mellom hver gang man mikrodoserer.</p>
+                <p>Mikrodosering vil si å ta små doser. En mikrodose er 10% eller mindre av en vanlig brukerdose. Det vil si omtrent 10µg LSD eller 0,1g sopp. Når man mikrodoserer tar man en dose to til tre ganger i uken, vanligvis over en periode på en måned. Det bør gå to dager mellom hver gang man mikrodoserer.</p>
                 <p>&nbsp;</p>
-                <p>I denne perioden er det lurt å føre dagbok, der man noterer ned humør, energinivå, opplevd kreativitet og generell allmenntilstand både for dagene man mikrodoser og dagene man ikke gjør det. Dette kan gi en bedre forståelse av hvilken effekt mikrodosering har på hverdagen, og gjør at en lettere kan vurdere eventuelle nytteeffekter og ulemper.</p>
+                <p>I perioden med mikrodosering er det lurt å føre dagbok. Skriv ned humør, energinivå, kreativitet og generell allmenntilstand - både for dagene man tar en mikrodose og dagene man ikke gjør det. Å føre dagbok kan gi en bedre forståelse av hvilken effekt mikrodosering har på hverdagen, og gjøre det lettere å vurdere positive og negative effekter.</p>
                 <p>&nbsp;</p>
                 <p><strong>Volumetrisk dosering av LSD</strong></p>
-                <p>Man kan måle opp dosene på flere måter, men for LSD er det best å foreta såkalt volumetrisk dosering. Dette innebærer å blande ut en standard dose i alkohol eller destillert vann, slik at man vet omtrent hvor stor konsentrasjon man har, og måle opp ønsket mengde for mikrodosering.</p>
+                <p>Dosene kan måles opp på flere måter, men for LSD er det best å gjøre en volumetrisk dosering. Det vil si å blande ut en dose i alkohol eller destillert vann, slik at man vet omtrent hvor stor konsentrasjon man har, og måle opp ønsket mengde for mikrodosering.</p>
                 <p>&nbsp;</p>
                 <p><strong>Dosering av psilocybin-sopp</strong></p>
-                <p>Ettersom psilocybin-sopp kan inneholde varierende mengder med psilocybin, anbefales det at man maler opp den tørkede soppen til et pulver. Deretter kan man bruke en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.</p>
+                <p>Psykedelisk sopp kan inneholde svært varierende mengder med psilocybin. Derfor bør den tørkede soppen males opp til pulver, før man bruker en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.</p>
               </div>
               <div class="col-lg-8 mx-auto text-center">
                 <hr class="transparent mt-5">
@@ -238,8 +238,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto text-faded">
               <div class="bg-dark card rounded pt-5 pb-4 mb-4">
-              <p>Det er inntil videre ikke gjort noen større studier på effektene av mikrodosering, men Dr. James Fadiman har samlet over tusen erfaringsrapporter (kilde: <a target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">Microdosing Psychedelics</a>), 
-              og gjengitt noen av disse i <em>The Psychedelic Explorer's Guide</em>. Her skriver han: "[...] I've avoided coming to any general conclusions about these low doses beyond noting that all the reports in my files indicate, as these individuals have, that low-dose use has been positive".</p>
+              <p>Det ikke gjort noen større studier på effektene av mikrodosering ennå, men Dr. James Fadiman har samlet over tusen erfaringsrapporter (kilde: <a target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">Microdosing Psychedelics</a>). Han gjengir noen av disse i (boken?) The Psychedelic Explorer's Guide. Her skriver han: "[...] I've avoided coming to any general conclusions about these low doses beyond noting that all the reports in my files indicate, as these individuals have, that low-dose use has been positive".</p>
               <div class="row text-left text-faded">
                   <div class="col-lg-12 my-3">
                     <p><strong>Lenker til forskning:</strong></p>
@@ -296,7 +295,7 @@
             <hr class="text-primary mt-4 mb-5">
             <div class="text-muted my-4 text-left mb-5">
               <h5 class="my-3">Forbedret funksjonsevne</h5>
-              <p>Mange som mikrodoserer gjør dette fordi de mener det gir dem bedre funksjonsevne i alt fra jobb- og treningssammenheng til sosiale sammenhenger. Man kan for eksempel oppleve at det er lettere å komme inn i såkalte "flow states" med uavbrutt konsentrasjon.</p>
+              <p>Mange mikrodoserer fordi de mener det gjør at de fungerer bedre, både på jobb, trening og sosialt. Det kan være lettere å komme inn i såkalte "flow states" med uavbrutt konsentrasjon.</p>
               <p>De positive effektene som rapporteres er blant annet: </p>
             </div>
             <div class="row text-left text-primary">
@@ -444,13 +443,13 @@
                 <p>Husk også at bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.</p>
               </div>
             </div>
-            <p>Psykedeliske rusmidler har i flere ekspertundersøkelser blitt vurdert å være blant de minst skadelige rusmidlene. De kjennetegnes ved en utgjøre en lav fysiologisk belastning på kroppen, og er ikke fysisk avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene av regelmessig bruk av psykedelika over lengre tidsrom, og derfor frarådes man fra å mikrodosere over mer enn et par måneder av gangen.</p>
+            <p>Psykedelika har i flere ekspertvurderinger blitt rangert å være blant de minst skadelige rusmidlene. De har en lav fysiologisk belastning på kroppen, og er ikke fysisk avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene av regelmessig bruk av psykedelika over lengre tid, og derfor bør man ikke mikrodosere over mer enn et par måneder av gangen.</p>
             <p>&nbsp;</p>
-            <p>I større doser kan psykedelika lede til emosjonelt krevende og potensielt traumatiserende opplevelser. Det er imidlertid uklart om dette er en risiko i de dosene som er vanlig ved mikrodosering. Man bør imidlertid merke seg at psykedelika har en tendens til å forsterke den emosjonelle tilstanden en er i, så også ved mikrodosering er det mulig å merke en forsterkning av negative følelser. Derfor anbefales det at man vurderer sin egen mentale tilstand før man evt. velger å mikrodosere. Dersom man lider av alvorlige mentale lidelser, som schizofreni eller alvorlig angst, bør man diskutere eventuelle planer om mikrodosering med fastlegen.</p>
+            <p>I større doser kan psykedelika lede til emosjonelt krevende og potensielt traumatiserende opplevelser. Det er uklart om dette er en risiko i de dosene som er vanlig ved mikrodosering, men uavhengig av dosering har psykedelika en tendens til å forsterke den emosjonelle tilstanden du er i. Det er også mulig å merke en forsterkning av negative følelser ved mikrodosering. Vurder din egen mentale tilstand før man evt. velger å mikrodosere. Dersom man lider av alvorlige mentale lidelser, som schizofreni eller alvorlig angst, bør man diskutere eventuelle planer om mikrodosering med fastlegen.</p>
             <p>&nbsp;</p>
-            <p>Grunnet manglende regulering av produksjon og distribusjon av LSD kan man aldri være helt sikker på at det man får i seg faktisk er LSD. Det har forekommet at mer skadelige erstatningsprodukter - som NBOME - selges som LSD. Disse produktene har en helt annen risikoprofil enn LSD, og det har vært tilfeller der noen har dødd etter å ha tatt et av disse produktene. Vi anbefaler derfor alle som har bestemt seg for å ta LSD, enten det er til rekreasjonelle formål eller for mikrodosering, å bruke testutstyr.</p>
+            <p>Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, må du bruke testutstyr for å være sikker om det faktisk er LSD. Skadelige rusmidler, som NBOME, kan bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, og det har vært tilfeller der noen har dødd etter å ha tatt et av disse produktene. Vi anbefaler derfor alle som har bestemt seg for å ta LSD, enten det er til rekreasjonelle formål eller for mikrodosering, å bruke testutstyr.</p>
             <p>&nbsp;</p>
-            <p>I tillegg til dette kommer den juridiske risikoen man utsetter seg for: Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff. Dette kan innebære husransakelse, involvering av Barnevernet og inndrag av førerkort.</p>
+            <p>I tillegg til dette kommer den juridiske risikoen man utsetter seg for. Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff. Dette kan innebære husransakelse, involvering av Barnevernet og inndrag av førerkort.</p>
             <div class="text-faded text-left mt-5">
               <p><strong>Nyttige lenker:</strong></p>
                 <div class="mb-3">
@@ -565,10 +564,25 @@
       <div class="container">
         <div class="row my-5">
           <div class="col-lg-8 mx-auto text-center">
-            <h3 class="mb-4 text-primary" style="font-size: 1.2rem;">Meld deg på nyhetsbrevet</h3>
+            <h3 class="mb-4" style="font-size: 1.2rem;">Få siste nytt rett i innboksen din</h3>
             <div class="mx-5">
-              <input class="input mb-4">
-              <button class="button mb-4" style="border-radius: 0px;">Hold meg oppdatert</button>
+              <div class="grid --center">
+                <div class="grid__item --s-12 --m-8">
+                  <div id="mc_embed_signup">
+                    <form action="https://emmasofia.us13.list-manage.com/subscribe/post?u=d738f7fcdd8533e9b2fc684a8&amp;id=c356a60553" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate="novalidate" class="validate">
+                      <div id="mc_embed_signup_scroll">
+                        <div class="subscribe">
+                          <input value="" name="EMAIL" id="mce-EMAIL" placeholder="Din epostadresse" required="required" class="subscribe__input" type="email"> 
+                          <input value="Meld meg på" name="subscribe" id="mc-embedded-subscribe" class="subscribe__button" type="submit">
+                        </div>
+                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                          <input name="b_d738f7fcdd8533e9b2fc684a8_c356a60553" tabindex="-1" value="" type="text">
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
