Added link to emmasofia.no

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Hvorfor mikrodosere</h2>
             <hr class="text-primary mt-4 mb-5">
-            <div class="text-muted mt-5 mb-4 text-left">
+            <div class="text-muted mb-4 text-left">
               <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde: <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">Wired</a>). Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer og angst i dagliglivet, og foretrekker dette fremfor psykiatriske medisiner.</p>
             </div>
           </div>
@@ -588,15 +588,20 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container pt-4">
         <div class="row justify-content-center">
-          <div class="col-xs-1 text-center mr-5 ml-auto">
+          <div class="col-xs-1 text-center mx-1">
             <a target="_blank" href="https://facebook.com/emmasofiaorg/">
               <i class="fab fa-facebook-f fa-2x"></i>
             </a>
           </div>
+          <div class="col-xs-1 text-center mx-1">
+            <a target="_blank" href="https://emmasofia.no/">
+              <i class="fa fa-link fa-2x"></i>
+            </a>
+          </div>
 
-          <div class="col-xs-1 text-center mr-auto">
+          <div class="col-xs-1 text-center mx-1">
             <a target="_blank" href="https://twitter.com/emmasofiaorg/">
               <i class="fab fa-twitter fa-2x"></i>
             </a>
