Diverse tekstendringer etter doc

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2 class="section-heading">Hvorfor mikrodosere</h2>
             <hr class="text-primary mt-4 mb-5">
             <div class="text-muted mb-4 text-left">
-              <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde: <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">Wired</a>). Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer og angst i dagliglivet, og foretrekker dette fremfor psykiatriske medisiner.</p>
+              <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde: <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">Wired</a>). Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer, nikotin og alkoholavhengighet eller angst.</p>
             </div>
           </div>
           <div class="col-lg-8 mx-auto text-center">
@@ -119,7 +119,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto ">
               <div class="bg-primary card rounded py-5 text-left text-faded">
-                <p>Mikrodosering vil si å ta små doser. En mikrodose er 10% eller mindre av en vanlig brukerdose. Det vil si omtrent 10µg LSD eller 0,1g sopp. Når man mikrodoserer tar man en dose to til tre ganger i uken, vanligvis over en periode på en måned. Det bør gå to dager mellom hver gang man mikrodoserer.</p>
+                <p>Mikrodosering vil si å ta små doser. En mikrodose er 10% eller mindre av en vanlig brukerdose. Det vil si omtrent 10µg LSD eller 0,1g sopp. Når man mikrodoserer tar man vanligvis en dose to til tre ganger i uken, vanligvis over en periode på en måned. Det bør gå to dager mellom hver gang man mikrodoserer.</p>
                 <p>&nbsp;</p>
                 <p>I perioden med mikrodosering er det lurt å føre dagbok. Skriv ned humør, energinivå, kreativitet og generell allmenntilstand - både for dagene man tar en mikrodose og dagene man ikke gjør det. Å føre dagbok kan gi en bedre forståelse av hvilken effekt mikrodosering har på hverdagen, og gjøre det lettere å vurdere positive og negative effekter.</p>
                 <p>&nbsp;</p>
@@ -127,7 +127,7 @@
                 <p>Dosene kan måles opp på flere måter, men for LSD er det best å gjøre en volumetrisk dosering. Det vil si å blande ut en dose i alkohol eller destillert vann, slik at man vet omtrent hvor stor konsentrasjon man har, og måle opp ønsket mengde for mikrodosering.</p>
                 <p>&nbsp;</p>
                 <p><strong>Dosering av psilocybin-sopp</strong></p>
-                <p>Psykedelisk sopp kan inneholde svært varierende mengder med psilocybin. Derfor bør den tørkede soppen males opp til pulver, før man bruker en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.</p>
+                <p>Individuell sopper kan inneholde svært varierende mengder med psilocybin. Derfor bør den tørkede soppen males opp til pulver, før man bruker en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.</p>
               </div>
               <div class="col-lg-8 mx-auto text-center">
                 <hr class="transparent mt-5">
@@ -238,7 +238,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto text-faded">
               <div class="bg-dark card rounded pt-5 pb-4 mb-4">
-              <p>Det ikke gjort noen større studier på effektene av mikrodosering ennå, men Dr. James Fadiman har samlet over tusen erfaringsrapporter (kilde: <a target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">Microdosing Psychedelics</a>). Han gjengir noen av disse i (boken?) The Psychedelic Explorer's Guide. Her skriver han: "[...] I've avoided coming to any general conclusions about these low doses beyond noting that all the reports in my files indicate, as these individuals have, that low-dose use has been positive".</p>
+              <p>Det ikke gjort noen større studier på effektene av mikrodosering ennå, men Dr. James Fadiman har samlet over tusen erfaringsrapporter (kilde: <a target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">Microdosing Psychedelics</a>). Han gjengir noen av disse i <a href="http://www.psychedelicexplorersguide.com/" target="_blank">The Psychedelic Explorer's Guide:</a> "[...] I've avoided coming to any general conclusions about these low doses beyond noting that all the reports in my files indicate, as these individuals have, that low-dose use has been positive".</p>
               <div class="row text-left text-faded">
                   <div class="col-lg-12 my-3">
                     <p><strong>Lenker til forskning:</strong></p>
@@ -365,7 +365,7 @@
                 <hr class="transparent mt-4 mb-5">
                 <div class="text-muted my-4 text-left mb-4">
                   <h5 class="my-3">Motvirkning av negative tilstander</h5>
-                  <p>Noen mikrodoserer fordi det gjør det lettere å håndtere diverse negative mentale tilstander, inkludert:</p>
+                  <p>Noen mikrodoserer fordi det gjør det lettere å håndtere eller endrer negative mentale tilstander, inkludert:</p>
                 </div>
               </div>
             </div>
@@ -437,19 +437,19 @@
             <div class="text-faded text-left">
               <div class="text-center text-primary">
               <div class="bg-white rounded px-5 pt-4 pb-4 mb-5">
-                <h4>Viktig</h4>
+                <!-- h4>Viktig</h4 -->
                 <div class="sr-warning2"><i class="fas fa-exclamation-triangle fa-2x mt-2 mb-3"></i></div>
-                <p>Dersom man lider av alvorlige mentale lidelser, som schizofreni eller alvorlig angst, bør man diskutere eventuelle planer om mikrodosering med fastlegen.</p>
+                <p>Dersom man lider av alvorlige mentale lidelser, som schizofreni, bør man diskutere eventuelle planer om mikrodosering med fastlegen.</p>
                 <p>Husk også at bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.</p>
               </div>
             </div>
-            <p>Psykedelika har i flere ekspertvurderinger blitt rangert å være blant de minst skadelige rusmidlene. De har en lav fysiologisk belastning på kroppen, og er ikke fysisk avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene av regelmessig bruk av psykedelika over lengre tid, og derfor bør man ikke mikrodosere over mer enn et par måneder av gangen.</p>
+            <p>Psykedelika har i flere ekspertvurderinger blitt rangert å være blant de minst skadelige rusmidlene. Psykedelika er kroppslig veltolerert, og er ikke avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et par måneder av gangen.</p>
             <p>&nbsp;</p>
-            <p>I større doser kan psykedelika lede til emosjonelt krevende og potensielt traumatiserende opplevelser. Det er uklart om dette er en risiko i de dosene som er vanlig ved mikrodosering, men uavhengig av dosering har psykedelika en tendens til å forsterke den emosjonelle tilstanden du er i. Det er også mulig å merke en forsterkning av negative følelser ved mikrodosering. Vurder din egen mentale tilstand før man evt. velger å mikrodosere. Dersom man lider av alvorlige mentale lidelser, som schizofreni eller alvorlig angst, bør man diskutere eventuelle planer om mikrodosering med fastlegen.</p>
+            <p>I større doser kan psykedelika lede til emosjonelt krevende og skremmende opplevelser. Dette er en usannsynlig risiko ved mikrodosering. Det er også mulig å merke en forsterkning av negative følelser ved mikrodosering. Vurder din egen mentale tilstand før du evt. velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser, som schizofreni, bør du diskutere dine planer om å mikrodosere med fastlegen.</p>
             <p>&nbsp;</p>
-            <p>Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, må du bruke testutstyr for å være sikker om det faktisk er LSD. Skadelige rusmidler, som NBOME, kan bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, og det har vært tilfeller der noen har dødd etter å ha tatt et av disse produktene. Vi anbefaler derfor alle som har bestemt seg for å ta LSD, enten det er til rekreasjonelle formål eller for mikrodosering, å bruke testutstyr.</p>
+            <p>Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, bør du bruke testutstyr for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME, kan bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, og det har vært tilfeller der noen har dødd etter å ha tatt et av disse produktene. Vi anbefaler derfor alle som har bestemt seg for å bruke psykedelika å bruke testutstyr.</p>
             <p>&nbsp;</p>
-            <p>I tillegg til dette kommer den juridiske risikoen man utsetter seg for. Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff. Dette kan innebære husransakelse, involvering av Barnevernet og inndrag av førerkort.</p>
+            <p>Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff. Dette kan innebære husransakelse, involvering av barnevernet og inndrag av førerkort.</p>
             <div class="text-faded text-left mt-5">
               <p><strong>Nyttige lenker:</strong></p>
                 <div class="mb-3">
