--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2 class="section-heading">Hvorfor mikrodosere</h2>
             <hr class="text-primary mt-4 mb-5">
             <div class="text-muted mb-4 text-left">
-              <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde: <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley/">Wired</a>). Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer, nikotin og alkoholavhengighet eller angst.</p>
+              <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde: <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley">Wired</a>). Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer, nikotin og alkoholavhengighet eller angst.</p>
             </div>
           </div>
           <div class="col-lg-8 mx-auto text-center">
@@ -243,7 +243,7 @@
                   <div class="col-lg-12 my-3">
                     <p><strong>Lenker til forskning:</strong></p>
                     <div class="mb-3">
-                      <a target="_blank" href="http://www.thelancet.com/journals/lancet/article/PIIS0140-6736(10)61462-6/abstract">
+                      <a target="_blank" href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(10)61462-6/abstract">
                         <span class="fa-stack">
                           <i class="fas fa-link"></i>
                         </span>
@@ -267,7 +267,7 @@
                       </a>
                     </div>
                     <div class="mb-3">
-                      <a target="_blank" href="https://www.pnas.org/content/109/6/2138.short/">
+                      <a target="_blank" href="http://www.pnas.org/content/109/6/2138.short/">
                         <span class="fa-stack">
                           <i class="fas fa-link"></i>
                         </span>
@@ -461,7 +461,7 @@
                   </a>
                 </div>
                 <div class="mb-3">
-                  <a target="_blank" href="https://emmasofiaklinikk.no/">
+                  <a target="_blank" href="https://www.emmasofiaklinikk.no/">
                     <span class="fa-stack">
                       <i class="fas fa-link"></i>
                     </span>
@@ -531,7 +531,7 @@
           </div>
           <div class="col-lg-6">
             <div class="linkbox">
-              <a target="_blank" href="https://www.youtube.com/watch?v=KbdVGoT9wsE/">
+              <a target="_blank" href="https://www.youtube.com/watch?v=KbdVGoT9wsE">
                 <div class="mx-auto mt-4 text-center py-5">
                   <span class="fa-stack my-3">
                     <i class="fas fa-2x fa-video"></i>
@@ -591,7 +591,7 @@
       <div class="container pt-4">
         <div class="row justify-content-center">
           <div class="col-xs-1 text-center mx-1">
-            <a target="_blank" href="https://facebook.com/emmasofiaorg/">
+            <a target="_blank" href="https://www.facebook.com/emmasofiaorg/">
               <i class="fab fa-facebook-f fa-2x"></i>
             </a>
           </div>
