Meta title and desc changes

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin. En standard mikrodose er 10µg med LSD eller 0,1 gram med sopp">
+    <meta name="description" content="Hvorfor og hvordan mikrodosere? Om forskningen, potensielle nytteefekter og risikoer.">
     <meta name="author" content="EmmaSofia">
 
-    <title>Mikrodosering.no</title>
+    <title>Mikrodosering - om mikrodosering av psykedelika</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
