Fix spelling 'individuelle'

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Dosene kan måles opp på flere måter, men for LSD er det best å gjøre en volumetrisk dosering. Det vil si å blande ut en dose i alkohol eller destillert vann, slik at man vet omtrent hvor stor konsentrasjon man har, og måle opp ønsket mengde for mikrodosering.</p>
                 <p>&nbsp;</p>
                 <p><strong>Dosering av psilocybin-sopp</strong></p>
-                <p>Individuell sopper kan inneholde svært varierende mengder med psilocybin. Derfor bør den tørkede soppen males opp til pulver, før man bruker en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.</p>
+                <p>Individuelle sopper kan inneholde svært varierende mengder med psilocybin. Derfor bør den tørkede soppen males opp til pulver, før man bruker en milligramsvekt for å måle opp i ønsket mengde for mikrodosering.</p>
               </div>
               <div class="col-lg-8 mx-auto text-center">
                 <hr class="transparent mt-5">
