Flere endringer etter initiell intern lansering

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <hr class="transparent mt-4 mb-5">
                 <div class="text-muted my-4 text-left mb-4">
                   <h5 class="my-3">Motvirkning av negative tilstander</h5>
-                  <p>Noen mikrodoserer fordi det gjør det lettere å håndtere eller endrer negative mentale tilstander, inkludert:</p>
+                  <p>Noen som mikrodoserer rapporterer at det gjør det lettere å håndtere eller endrer negative mentale tilstander, inkludert:</p>
                 </div>
               </div>
             </div>
@@ -451,15 +451,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="bg-white rounded px-5 pt-4 pb-4 mb-5">
                 <!-- h4>Viktig</h4 -->
                 <div class="sr-warning2"><i class="fas fa-exclamation-triangle fa-2x mt-2 mb-3"></i></div>
-                <p>Dersom man lider av alvorlige mentale lidelser, som schizofreni, bør man diskutere eventuelle planer om mikrodosering med fastlegen.</p>
-                <p>Husk også at bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.</p>
+                <p>Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.</p>
               </div>
             </div>
-            <p>Psykedelika har i flere ekspertvurderinger blitt rangert å være blant de minst skadelige rusmidlene. Psykedelika er kroppslig veltolerert, og er ikke avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et par måneder av gangen.</p>
+            <p>Psykedelika har i flere ekspertvurderinger blitt rangert å ha lavere risiko enn andre rusmidler. Psykedelika er kroppslig veltolerert, og er ikke avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et par måneder av gangen..</p>
             <p>&nbsp;</p>
-            <p>I større doser kan psykedelika lede til emosjonelt krevende og skremmende opplevelser. Dette er en usannsynlig risiko ved mikrodosering. Det er også mulig å merke en forsterkning av negative følelser ved mikrodosering. Vurder din egen mentale tilstand før du evt. velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser, som schizofreni, bør du diskutere dine planer om å mikrodosere med fastlegen.</p>
+            <p>I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig risiko ved mikrodosering. Det er også mulig å merke en forsterkning av negative følelser ved mikrodosering. Vurder din egen mentale tilstand før du velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser, som schizofreni, bør du diskutere med fastlegen før du velger å mikrodosere.</p>
             <p>&nbsp;</p>
-            <p>Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, bør du bruke testutstyr for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME, kan bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, og det har vært tilfeller der noen har dødd etter å ha tatt et av disse produktene. Vi anbefaler derfor alle som har bestemt seg for å bruke psykedelika å bruke testutstyr.</p>
+            <p>Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, bør du bruke testutstyr for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME, kan bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD,  dødsfall har forekommet etter bruk av disse produktene. Vi anbefaler derfor alle som har bestemt seg for å bruke psykedelika å bruke testutstyr.</p>
             <p>&nbsp;</p>
             <p>Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff. Dette kan innebære husransakelse, involvering av barnevernet og inndrag av førerkort.</p>
             <div class="text-faded text-left mt-5">
