--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <span class="fa-stack">
                       <i class="fas fa-link"></i>
                     </span>
-                    Bestill time hos EmmaSofia Klinikk (https://emmasofiaklinikk.no/)
+                    Bestill time til Psykolog i Oslo hos EmmaSofia Klinikk (https://emmasofiaklinikk.no/)
                   </a>
                 </div>
               </div>
