Add og tags and change title

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Hvorfor og hvordan mikrodosere? Om forskningen, potensielle nytteefekter og risikoer.">
+        <meta name="og:description" content="Hvorfor og hvordan mikrodosere? Om forskningen, potensielle nytteefekter og risikoer.">
     <meta name="author" content="EmmaSofia">
 
-    <title>Mikrodosering - om mikrodosering av psykedelika</title>
+    <title>Mikrodosering.no - Veileder til mikrodosering med psykedelika</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -27,6 +28,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:image" content="http://mikrodosering.no/img/header.jpg" />
+    <meta property="og:title" content="Mikrodosering.no - Veileder til mikrodosering med psykedelika" />
+
 
     <!-- EmmaSofia styleguide CSS -->
     <link rel="stylesheet" href="https://unpkg.com/emmasofia@0.4.2/main.css">
