--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:image" content="http://mikrodosering.no/img/header.jpg" />
     <meta property="og:title" content="Mikrodosering.no - Veileder til mikrodosering med psykedelika" />
+    <meta property="og:url" content="http://mikrodosering.no/">
+    <meta property="og:type" content="website">
+
 
 
     <!-- EmmaSofia styleguide CSS -->
