Fixed metatag for og:desc

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Hvorfor og hvordan mikrodosere? Om forskningen, potensielle nytteefekter og risikoer.">
-        <meta name="og:description" content="Hvorfor og hvordan mikrodosere? Om forskningen, potensielle nytteefekter og risikoer.">
+    <meta property="og:description" content="Hvorfor og hvordan mikrodosere? Om forskningen, potensielle nytteefekter og risikoer.">
     <meta name="author" content="EmmaSofia">
 
     <title>Mikrodosering.no - Veileder til mikrodosering med psykedelika</title>
