fikset skrivefeil og spesifisert tørket sopp

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </h1>
           <img class="mb-4 mt-3" width="74" src="img/es_logo_white.svg" alt="">
           <p class="text-faded mb-5">Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin. En standard mikrodose er 10µg
-            med LSD eller 0,1 gram med sopp. Det er omtrent 10% av en vanlig brukerdose. Mikrodosene blir tatt med regelmessige
+            med LSD eller 0,1 gram med tørket psilocybinsopp. Det er omtrent 10% av en vanlig brukerdose. Mikrodosene blir tatt med regelmessige
             intervaller, for eksempel hver tredje dag, og over lengre tid.</p>
           <a class="button js-scroll-trigger" href="#hvorfor">finn ut mer</a>
         </div>
@@ -162,7 +162,7 @@
         <div class="grid__item --s-11 --m-8">
           <div class="block --bg-primary --pt --pb --border-radius text-faded">
             <p>Mikrodosering vil si å ta små doser. En mikrodose er 10% eller mindre av en vanlig brukerdose. Det vil si omtrent
-              10µg LSD eller 0,1g sopp. Når man mikrodoserer tar man vanligvis en dose to til tre ganger i uken, vanligvis
+              10µg LSD eller 0,1g tørket psilocybinsopp. Når man mikrodoserer tar man vanligvis en dose to til tre ganger i uken, vanligvis
               over en periode på en måned. Det bør gå to dager mellom hver gang man mikrodoserer.</p>
             <p>&nbsp;</p>
             <p>I perioden med mikrodosering er det lurt å føre dagbok. Skriv ned humør, energinivå, kreativitet og generell
@@ -522,14 +522,13 @@
               av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et
               par måneder av gangen..</p>
             <p>&nbsp;</p>
-            <p>I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig
-              risiko ved mikrodosering. Det er også mulig å merke en forsterkning av negative følelser ved mikrodosering.
+            <p>I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig risiko ved mikrodosering, men det er mulig å merke en forsterkning av negative følelser.
               Vurder din egen mentale tilstand før du velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser,
               som schizofreni, bør du diskutere med fastlegen før du velger å mikrodosere.</p>
             <p>&nbsp;</p>
             <p>Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, bør
               du bruke testutstyr for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME, kan
-              bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, dødsfall har forekommet etter bruk av disse
+              bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, og dødsfall har forekommet etter bruk av disse
               produktene. Vi anbefaler derfor alle som har bestemt seg for å bruke psykedelika å bruke testutstyr.</p>
             <p>&nbsp;</p>
             <p>Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.
